# weixindk

./: .gitignore  LICENSE  README.md  index.html  package.json  tailwind.config.js  械式微信多开器开发文档.md
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  mod.rs  wechat.rs
src-tauri/src/mutex/: manager.rs  mod.rs  names.rs
src-tauri/src/process/: launcher.rs  mod.rs  monitor.rs  registry.rs
src-tauri/src/storage/: config.rs  database.rs  mod.rs  models.rs
src/components/About/: AboutPanel.tsx
src/components/Instance/: ControlPanel.tsx  InstanceCard.tsx
src/components/Layout/: MainLayout.tsx
src/components/Settings/: SettingsPanel.tsx
src/hooks/: useWechat.ts
src/services/: tauri.ts
src/styles/: global.css
src/types/: index.ts
