[package]
name = "xieshi-wechat-multi"
version = "0.2.0"
edition = "2021"
authors = ["aaaa"]
description = "械式微信多开器 - 免费的微信多开工具"
license = "MIT"

[lib]
name = "xieshi_wechat_multi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
sysinfo = "0.31"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
